unpackaged/main/default/objects/Contact/fields/Account_Owned_by_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Account_Owned_by_Running_User__c</fullName>
    <formula>Account.OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owned by Running User</label>
    <type>Checkbox</type>
</CustomField>