unpackaged/main/default/objects/Contact/fields/CFCR_Admin_Score_Increment__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Admin_Score_Increment__c</fullName>
    <description>Updated by a workflow based on changes in other score fields monitored by the Full Circle Score Reanimation Trigger.</description>
    <inlineHelpText>Updated by a workflow based on changes in other score fields monitored by the Full Circle Score Reanimation Trigger.</inlineHelpText>
    <label>Admin Score Increment</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>