unpackaged/main/default/objects/Contact/fields/Clari_Modified_Contact__c.field-meta.xml
<CustomField>
    <fullName>Clari_Modified_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>a field for the Clari application to complete the autocapture functionality.</description>
    <inlineHelpText>a field for the Clari application to complete the autocapture functionality.</inlineHelpText>
    <label>Clari Modified Contact</label>
    <type>Checkbox</type>
</CustomField>