unpackaged/main/default/objects/Contact/fields/ClariModifiedContactDate__c.field-meta.xml
<CustomField>
    <fullName>ClariModifiedContactDate__c</fullName>
    <description>This is a field for the Clari user to write to for autocapture</description>
    <inlineHelpText>This is a field for the Clari user to write to for autocapture</inlineHelpText>
    <label>Clari Modified Contact Date</label>
    <type>DateTime</type>
</CustomField>