unpackaged/main/default/objects/Contact/fields/fidcompany__c.field-meta.xml
<CustomField>
    <fullName>fidcompany__c</fullName>
    <label>Current Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>