unpackaged/main/default/objects/Contact/fields/fidliurl__c.field-meta.xml
<CustomField>
    <fullName>fidliurl__c</fullName>
    <label>LinkedIn URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>