unpackaged/main/default/objects/Contact/fields/fidtitle__c.field-meta.xml
<CustomField>
    <fullName>fidtitle__c</fullName>
    <label>Current Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>