unpackaged/main/default/objects/Contact/fields/fidtwhan__c.field-meta.xml
<CustomField>
    <fullName>fidtwhan__c</fullName>
    <label>Twitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>