unpackaged/main/default/objects/Contact/fields/G_com_Username__c.field-meta.xml
<CustomField>
    <fullName>G_com_Username__c</fullName>
    <label>gcomuserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>