unpackaged/main/default/objects/Contact/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <formula>IF(ISBLANK(Account.BillingCountry ), "No Country",

IF( Account.BillingCountry = "United States", "US", "INTL"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo</label>
    <type>Text</type>
</CustomField>