unpackaged/main/default/objects/Contact/fields/ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>ID_18_digit__c</fullName>
    <description>This field converts the 15 digit ID to an 18 digit ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID (18 digit)</label>
    <type>Text</type>
</CustomField>