unpackaged/main/default/objects/Contact/fields/Inactive_Trial__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive Trial</label>
    <type>Checkbox</type>
</CustomField>