unpackaged/main/default/objects/Contact/fields/org1_slug__c.field-meta.xml
<CustomField>
    <fullName>org1_slug__c</fullName>
    <description>Primary Org Slug in Grafana.com</description>
    <label>org1_slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>