unpackaged/main/default/objects/Contact/fields/org1_wp_checks_month__c.field-meta.xml
<CustomField>
    <fullName>org1_wp_checks_month__c</fullName>
    <description>worldPing checks per month from Primary Org</description>
    <label>org1_wp_checks_month</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>