unpackaged/main/default/objects/Contact/fields/orgtrial_hgCurrentActiveUsers__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_hgCurrentActiveUsers__c</fullName>
    <label>orgtrial_hgCurrentActiveUsers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>