unpackaged/main/default/objects/Contact/fields/orgtrial_hgDatasources__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_hgDatasources__c</fullName>
    <label>orgtrial_hgDatasources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>