unpackaged/main/default/objects/Contact/fields/orgtrial_hgFirstDatasourceDate__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_hgFirstDatasourceDate__c</fullName>
    <label>orgtrial_hgFirstDatasourceDate</label>
    <type>DateTime</type>
</CustomField>