unpackaged/main/default/objects/Contact/fields/orgtrial_hlCurrentUsage__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_hlCurrentUsage__c</fullName>
    <label>orgtrial_hlCurrentUsage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>