unpackaged/main/default/objects/Contact/fields/orgtrial_hmUsage__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_hmUsage__c</fullName>
    <label>orgtrial_hmUsage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>