unpackaged/main/default/objects/Contact/fields/orgtrial_slug__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_slug__c</fullName>
    <label>orgtrial_slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>