unpackaged/main/default/objects/Contact/fields/Original_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Original_Campaign__c</fullName>
    <label>Original Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>