unpackaged/main/default/objects/Contact/fields/Original_Campaign_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Campaign_UTM_Source__c</fullName>
    <label>Original Campaign UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>