unpackaged/main/default/objects/Contact/fields/Originating_URL__c.field-meta.xml
<CustomField>
    <fullName>Originating_URL__c</fullName>
    <label>Originating URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>