unpackaged/main/default/objects/Contact/fields/Re_engage_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_engage_Date__c</fullName>
    <label>Re-engage Date</label>
    <type>Date</type>
</CustomField>