unpackaged/main/default/objects/Contact/fields/Re_engage_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Re_engage_Qualified__c</fullName>
    <label>Re-engage Qualified?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>