unpackaged/main/default/objects/Contact/listViews/Eduardo_Matchec_Account_Gcon_Contacts.listView-meta.xml
<ListView>
    <fullName>Eduardo_Matchec_Account_Gcon_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>FCRM__FCR_Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CAMPAIGN_MEMBER.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>trieu,cella</value>
    </filters>
    <label>Eduardo - Matchec Account Gcon Contacts</label>
</ListView>