unpackaged/main/default/objects/Contact/listViews/James_Grafana_Cloud_Trials_Contacts.listView-meta.xml
<ListView>
    <fullName>James_Grafana_Cloud_Trials_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Account_Owner_Name__c</field>
        <operation>equals</operation>
        <value>Vince Handley,Federica Fois</value>
    </filters>
    <label>James Grafana Cloud Trials - Contacts</label>
</ListView>