unpackaged/main/default/objects/Contact/listViews/My_Sales_Ready_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Sales_Ready_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FCRM__FCR_Status__c</columns>
    <columns>CFCR_Response__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Mapped_SDR_Name__c</field>
        <operation>contains</operation>
        <value>chris</value>
    </filters>
    <filters>
        <field>FCRM__FCR_Status__c</field>
        <operation>equals</operation>
        <value>Sales Ready,Sales Attempting,Sales In Contact,Existing Opportunity</value>
    </filters>
    <label>My Sales Ready Contacts (Make Copy)</label>
</ListView>