unpackaged/main/default/objects/Contact/listViews/Salesforce_Tech_Day_Attendee_List.listView-meta.xml
<ListView>
    <fullName>Salesforce_Tech_Day_Attendee_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>FCRM__FCR_Status__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CAMPAIGN_MEMBER.STATUS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN_MEMBER.STATUS</field>
        <operation>equals</operation>
        <value>Attended,Attended - Meeting Request,Attended Live</value>
    </filters>
    <label>Salesforce Tech Day Attendee List</label>
</ListView>