unpackaged/main/default/objects/Contact/listViews/Thibuad_Contacts_2022_02_23_French_Web.listView-meta.xml
<ListView>
    <fullName>Thibuad_Contacts_2022_02_23_French_Web</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Thibuad Contacts - 2022-02-23 French Web</label>
</ListView>