unpackaged/main/default/objects/Contact/listViews/X2022_02_24_German_Seminar_Unlock.listView-meta.xml
<ListView>
    <fullName>X2022_02_24_German_Seminar_Unlock</fullName>
    <columns>Account.Status__c</columns>
    <columns>Account.Account_Owner_Name__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>2022-02-24 German Seminar - Unlock</label>
</ListView>