unpackaged/main/default/objects/Contact/listViews/X3_18_Prometheus_Advanced_Workshop_AMA.listView-meta.xml
<ListView>
    <fullName>X3_18_Prometheus_Advanced_Workshop_AMA</fullName>
    <columns>FULL_NAME</columns>
    <columns>FCRM__FCR_Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CAMPAIGN_MEMBER.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CAMPAIGN_MEMBER.STATUS</field>
        <operation>notEqual</operation>
        <value>Not technically qualified</value>
    </filters>
    <label>3/18 Prometheus Advanced Workshop &amp; AMA</label>
</ListView>